--- a/BoardWeb(Model2)/WebContent/WEB-INF/web.xml
+++ b/BoardWeb(Model2)/WebContent/WEB-INF/web.xml
@@ -3,13 +3,10 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
-
 	<display-name>BoardWeb(Model2)</display-name>
-
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
-	
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -22,23 +19,24 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
-
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:businesslayer-layer.xml</param-value>
+		<param-value>classpath:business-layer.xml</param-value>	
 	</context-param>
 	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-
+	
+	
 	<servlet>
 		<servlet-name>action</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>/WEB-INF/spring/presentation-layer.xml</param-value>
-		</init-param>		
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>action</servlet-name>
@@ -46,6 +44,8 @@
 	</servlet-mapping>
 
 </web-app>
+
+
 
 
 
